Thu Dec 20 12:25:47 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc: Added parsedate function, used by getdate, to
	parse date headers without requiring strptime or mktime, which have
	caused problems on some systems.

Thu Dec 20 11:51:26 CET 2001 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* configure.in: reviewed directory settings
	* Makefile.in: ditto (for 'make install' of htdig.conf and rundig)

Wed Dec 19 23:05:09 2001  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* configure.in: Add tests for ostream.h and iostream.h.

	* htlib/htString.h: Add HAVE_OSTREAM_H and HAVE_IOSTREAM_H
	preprocessor statements to deal with portability issues around the
	C++ header files.

Wed Dec 19 13:33:55 2001 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* configure.in: fixed bug in customisation of configure paramters
	* CONFIG.in: ditto
	* configure: re-generated with autoconf

Tue Dec 18 16:12:17 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (displayMatch): Fixed to clear out old values
	of ANCHOR template variable for each result.

Thu Dec  6 13:14:22 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/examples/rundig.sh: Fixed to make use of DBDIR variable.

Wed Nov 21 12:54:42 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/rundig.html: Added note about effect of changing database_base.

	* htmerge/docs.cc (convertDocs): Changed confusing message about
	total doc db size in stats.

Wed Nov 21 11:37:52 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/TemplateList.cc (createFromString), htdoc/attrs.html:
	Treat template_map as a _quoted_ string list.  Change <i> tags to
	the HTML-4.0 compliant <em> tags in builtin-long template.

Tue Nov 20 17:13:27 2001  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/String.cc (String, append, sub): Added checks for negative
	lengths or start position to make code more fault-tolerant.
